--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -95,7 +95,7 @@
         <% end %>
         <div class="text-center">
           <hr>
-          <p class="text-light">J'ai déjà un compte? <a class="text-cdae" href="<%=new_user_session_path%>">Je crée un connecte</a></p>
+          <p class="text-light">J'ai déjà un compte? <a class="text-cdae" href="<%=new_user_session_path%>">Je me connecte</a></p>
         </div>
         </div>
       </div>
