--- a/app/views/Balances/index.html.erb
+++ b/app/views/Balances/index.html.erb
@@ -2,7 +2,7 @@
 <div class="container mt-2 mb-4">
   <div class="row mb-4">
     <div class="col text-end">
-      <%= link_to "Nouvel remboursement", new_remboursement_path, class: "btn btn-primary" %>
+      <%= link_to "Nouveau remboursement", new_remboursement_path, class: "btn btn-primary" %>
     </div>
   </div>
   <div class="card shadow-lg border-0">
