--- a/app/views/dashboard/accueil.html.erb
+++ b/app/views/dashboard/accueil.html.erb
@@ -136,20 +136,21 @@
                 <div class="col-lg-7 py-5">
                     <h1 class="mb-4 text-light" style="z-index:1000">Bienvenue <%=current_user.nom%> <%=current_user.prenom%></h1>
                     <marquee behavior="scroll" direction="left" class="text-cdae" style="font-size: 20px; font-weight: bold; background-color: aliceblue;">
-                    Bienvenue chez CDAE ! Nous sommes ravis de vous accueillir et de contribuer à la réussite de vos projets agro-économiques. Merci pour votre confiance !
+                    Bienvenue chez CDAE-FINANCE ! Nous sommes ravis de vous accueillir et de contribuer à la réussite de vos projets agricoles. Merci pour votre confiance !
                     </marquee>
                     
                 </div>
                 <div class="col-lg-5">
                     <div class="py-5 px-4 masthead-cards">
                         <div class="d-flex">
-                            <a href="<%=new_service_request_path%>" class="w-50 pe-3 pb-4">
+                            
+                            <a href="#" class="w-50 pe-3 pb-4" data-toggle="modal" data-target="#exampleModalLong">
                                 <div class="card border-0 border-bottom-red shadow-lg shadow-hover">
                                     <div class="card-body text-center">
                                         <div class="text-center">
                                             <i class="fas fa-tractor fa-4x my-2"></i>
                                         </div>
-                                        Nouveau service
+                                        Nouvelle Demande de service
                                     </div>
                                 </div>
                             </a>
@@ -165,7 +166,7 @@
                             </a>
                         </div>
                         <div class="d-flex">
-                            <a href="#" class="w-50 pe-3">
+                            <a href="<%=remboursements_path%>" class="w-50 pe-3">
                                 <div class="card border-0 border-bottom-yellow shadow-lg shadow-hover">
                                     <div class="card-body text-center">
                                         <div class="text-center">
@@ -233,3 +234,56 @@
         </svg>
     </header>
 </div>
+        
+        
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">DETAIL DE L'ACCORD</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+                </div>
+                <div class="modal-body" style="text-align: justify;">
+                    <!-- Description détaillée -->
+                    <p>N° du Contrat de Prestation de Services (CPS)</p>
+                    <p>Numéro du client : 1.2 K A</p>
+                    <p>**CONTRAT DE PRESTATION DE SERVICES**</p>
+                    <p>(Copie du Bureau)</p>
+                    <p>Entre les soussignés :</p>
+                    <p>La COOPERATIVE DE FINANCEMENT POUR LE DEVELOPPEMENT DE L’AGRICULTURE ET DE L’ELEVAGE (CDAE-FINANCE) ayant son siège social à Bon en face de l’Ecole Primaire Publique centrale, enregistrée sous le numéro 04/03/03/2017/0082/Im au Registre des SCOOP Simplifiées du Borgou, tél : 96 03 21 16</p>
+                    <p>Et :</p>
+                    <p>Le (la) client (e) :</p>
+                    <p>Nom et prénoms : . _S_ _E_ _G_ _A_ H _... N_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_ _t_</p>
+                    <p>© Les frais liés à l’acheminement des sacs de soja au magasin de la CDAE-FINANCE, ainsi que les sacs d’emballage correspondant au remboursement des dettes sont à la charge entière du client.</p>
+                    <p>En réseau, le client : © C.G.A.H…Victeron… envoie à la CDAE-FINANCE, AGEO…… Rg de soja au plus tard le 13 décembre 2024.</p>
+                    <p>Article 3 : Intérêts et Pénalités</p>
+                    <p>Aussi intérêt particulier n’est demandé au client outre le remboursement en nature convenu dans ce présent comité. Par contre, les contrevenants courent la pénalité ou la sanction suivante :</p>
+                    <p> tout remboursement du client intervenu après le délai du 15 décembre 2024 est passible d’une pénalité de 5 Kg/sec ;</p>
+                    <p> le client n’ayant pas honoré son engagement jusqu’au 20 décembre 2024, verra son cas classé comme Inigeux et soumis ensuite à l’autorité locale de premier niveau dont le Commissariat de Police de Sharon. Ainsi, les frais de médiation de l’autorité locale augmentés des pénalités de la CDAE-FINANCE comme énumérées ci-dessus sont entièrement imputés et exigibles au client.</p>
+                    <p>Article 3 : Cas de force majeure entrevant le remboursement de la dette</p>
+                    <p>Lorsque le Débiteur (client) ne parvient pas à rembourser sa dette comme convenu suite à l’innodation entière du champ de soja suivie de l’improductivité des plants (seul cas considéré comme force majeure), il pourra la rembourser avec du maïs. Dans ce cas, un comité formé des représentants des agriculteurs et des responsables de la CDAE-FINANCE siège pour définir la quantité correspondant à l’apurement de la dette. En ce qui concerne le qualifié remboursement, la même pénalité est également applicable et exigible au client.</p>
+                    <p>Article 4 : Cas de décès du client</p>
+                    <p>Par ce présent contrat et en cas de décès, le Débiteur donne pouvoir et autorise les membres de sa famille sans que les amis à rembourser intégralement la CDAE-FINANCE dans le délai convenu (15 décembre 2024 au plus tard). Pour le retard de remboursement autorisé jusqu’à la date limite du 20 décembre 2024, le remboursement de la dette par le soja ou le maïs est fait sans aucune pénalité. C’est par ce geste symbolique, que les membres fondateurs de la CDAE-FINANCE compatissent à la douleur de la famille éplorée tout en notifiant qu’ils n’ont nullement la prétention de faire un mauvais souhait que ce soit, à leur très cher client.</p>
+                    <p>Article 5 : Election de domicile et attribution de compétence</p>
+                    <p>Tout litige n’ayant pas été résolu par l’autorité locale, est transféré pour être définitivement tranché par le Totanaï de Première Instance de Parakou. De toutes les manières, la CDAE-FINANCE privilégie le règlement à l’accueil des difficultés liées au présent contrat.</p>
+                    <p>Bonne chance cher client, et bonne moisson pour la campagne agricole 2024-2025 !</p>
+                    <p>Pour la CDAE-FINANCE,</p>
+                    <p>LE GERANT</p>
+                    <p>Mr Osséni TOKOROU</p>
+                    
+                    <!-- Détails de l'accord -->
+                    <p>Montant du prêt: <span id="modalAmount">0</span> Tk</p>
+                    <p>Catégorie: <span id="modalCategory">---------</span></p>
+                    <p>Date de demande: <span id="modalRequestDate">29/11/2024</span></p>
+                    <p>Durée: <span id="modalYear">1</span> ans</p>
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">JE REFUSE</button>
+                <a href="<%=new_service_request_path%>" class="btn btn-success"> J'ACCEPTE LES CONDITIONS</a>
+                </div>
+            </div>
+            </div>
+        </div>
