--- a/app/views/executions/new.html.erb
+++ b/app/views/executions/new.html.erb
@@ -3,7 +3,8 @@
 
   <div class="card shadow-sm">
     <div class="card-body">
-      <%= form_with(model: @execution, local: true) do |form| %>
+      <%= form_with url:upload_identity_card_executions_path, method: :post, html: { enctype: 'multipart/form-data' }, local: true do |form| %>
+
         <% if @execution.errors.any? %>
           <div class="alert alert-danger">
             <h4>Erreurs</h4>
@@ -19,19 +20,19 @@
           <%= form.label :service_request_id, "Demande de Service", class: "form-label" %>
         
           <%= form.select :service_request_id, 
-                      options_for_select(ServiceRequest.all.map { |h| [h.id, h.id] }), 
+                      options_for_select(@demandes_validees.map { |h| [h.id, h.id] }), 
                       { prompt: "-- Sélectionnez une demande --" }, 
-                      { class: "form-select shadow-sm select-beast"} %>
+                      { class: "form-select shadow-sm select-beast", id: "service_request_select"  } %>
         </div>
 
         <div class="mb-3">
           <%= form.label :superficie, "Superficie Labourée (Ha)", class: "form-label" %>
-          <%= form.number_field :superficie, step: 0.01, class: "form-control" %>
+          <%= form.number_field :superficie, step: 0.01, class: "form-control", id: "superficie_field"  %>
         </div>
 
         <div class="mb-3">
           <%= form.label :preuve, "Image de Preuve", class: "form-label" %>
-          <%= form.file_field :preuve, class: "form-control" %>
+           <%= form.file_field :file, class: "form-control", required: true %>
         </div>
 
         <div class="d-flex justify-content-between">
@@ -43,3 +44,31 @@
   </div>
 </div>
 <%= javascript_include_tag 'tom_select'%> 
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const serviceRequestSelect = document.getElementById("service_request_select");
+    const superficieField = document.getElementById("superficie_field");
+
+    serviceRequestSelect.addEventListener("change", function () {
+      const selectedId = this.value;
+      console.log("ID sélectionné :", selectedId); // Vérifie l'ID sélectionné
+
+      if (selectedId) {
+        fetch(`/service_requests/${selectedId}`)
+          .then((response) => response.json())
+          .then((data) => {
+            console.log("Données reçues :", data); // Affiche les données reçues
+            if (data.superficie) {
+              superficieField.value = data.superficie;
+            }
+          })
+          .catch((error) => {
+            console.error("Erreur AJAX :", error);
+          });
+      } else {
+        superficieField.value = "";
+      }
+    });
+
+  });
+</script>
