--- a/app/views/layouts/dashboard/_sidebar.html.erb
+++ b/app/views/layouts/dashboard/_sidebar.html.erb
@@ -4,9 +4,25 @@
 
           <ul>
                 <li class="menu-title text-light">Menu</li>
-                 <li>
+            <%if current_user.role == "agriculteur"%>
+                 <li class="active">
                     <a href="<%=dashboard_accueil_path%>"><i class="fa fa-user-o"></i> <span>Accueil</span></a>
                 </li>
+                <li>
+                    <a href="<%=service_requests_path%>"><i class="fa fa-calendar"></i> <span>Mes demandes de service</span></a>
+                </li>
+                <li>
+                    <a href="<%=remboursements_path%>"><i class="fa fa-calendar-check-o"></i> <span>Mes Remboursements</span></a>
+                </li>
+                <li>
+                    <a href="<%=balances_path%>"><i class="fa fa-calendar-check-o"></i> <span>Mes Bilans de campagne</span></a>
+                </li>
+            <%elsif current_user.role == "technicien"%>
+                <li class="active">
+                    <a href="<%=dashboard_index_path%>"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
+                </li>
+            <%else%>
+                
                 <li class="active">
                     <a href="<%=dashboard_index_path%>"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
                 </li>
@@ -25,17 +41,23 @@
                 <li>
                     <a href="<%=herbicides_path%>"><i class="fa fa-calendar-check-o"></i> <span>Les herbicides</span></a>
                 </li>
+                <%if current_user.role != "secretaire"%>
                 <li>
                     <a href="<%=indice_setting_path%>"><i class="fa fa-calendar-check-o"></i> <span>Indice de calcule</span></a>
                 </li>
+                <%end%>
                 <li>
                     <a href="<%=zone_assignments_path%>"><i class="fa fa-calendar-check-o"></i> <span>Zone agriculteur</span></a>
                 </li>
                 <li>
                     <a href="<%=executions_path%>"><i class="fa fa-calendar-check-o"></i> <span>Taches executées</span></a>
                 </li>
-                <li>
-                    <a href="<%=new_service_request_path%>" style="font-weight: bolder;" class="text-warning"><i class="fa fa-hospital-o"></i> <span>Nouvelle demande</span></a>
+                <%end%>
+                <li class="text-center">
+                <hr>
+                    <% if user_signed_in? %>
+                                <%= button_to "Se déconnecter", destroy_user_session_path, method: :delete, class: "btn btn-danger text-end" %>
+                        <% end %>
                 </li>
             </ul>
             
