--- a/app/views/service_requests/edit.html.erb
+++ b/app/views/service_requests/edit.html.erb
@@ -22,13 +22,18 @@
   </div>
 
   <!-- Conteneur pour les herbicides -->
-  <div id="herbicides-container">
+<div id="herbicides-container">
+  <% if @herbicides.any? %>
     <% @herbicides.each do |herbicide_association| %>
+      <% herbicide = Herbicide.find_by(id: herbicide_association.herbicide_id) %>
       <div class="herbicide-group">
         <div class="form-group row">
           <div class="col-md-6">
             <label class="col-form-label">Herbicide</label>
-            <select class="form-control herbicide-select" name="service_request[herbicides][][id]">
+            <select class="form-control herbicide-select" 
+                    name="service_request[herbicides][][id]" 
+                    data-herbicide-prices="<%= Herbicide.pluck(:id, :garantie_par_litre).to_h.to_json %>" 
+                    data-soja-par-litre="<%= Herbicide.pluck(:id, :soja_par_litre).to_h.to_json %>">
               <option value="">-- Choisir un herbicide --</option>
               <% Herbicide.all.each do |h| %>
                 <option value="<%= h.id %>" <%= "selected" if h.id == herbicide_association.herbicide_id %>><%= h.nom %></option>
@@ -36,19 +41,58 @@
             </select>
           </div>
 
-          <div class="col-md-2">
+          <div class="col">
             <label class="col-form-label">Quantité (L)</label>
-            <input type="number" name="service_request[herbicides][][quantite]" class="form-control herbicide-quantite" min="0" step="0.01" value="<%= herbicide_association.quantite %>">
+            <input type="number" name="service_request[herbicides][][quantite]" 
+                   class="form-control herbicide-quantite" 
+                   min="0" step="0.01" value="<%= herbicide_association.quantite %>">
           </div>
-          <div class="col-md-4">
+
+          <div class="col-md-4 champs_superficie">
             <label class="col-form-label">Garantie (F CFA)</label>
-            <% @gpl = Herbicide.find_by(id: herbicide_association.herbicide_id)%>
-          <input type="text" class="form-control herbicide-garantie" value="<%= herbicide_association.quantite * (@gpl&.garantie_par_litre || 0) %>" readonly>
+            <input type="text" class="form-control herbicide-garantie" 
+            value="<%= herbicide_association.quantite * (herbicide&.garantie_par_litre || 0) %>" readonly>
           </div>
+
         </div>
+        <button class="remove-herbicide" type="button">Supprimer</button>
       </div>
     <% end %>
-  </div>
+  <% else %>
+    <!-- Affichez un groupe vide pour permettre l'ajout -->
+    <div class="herbicide-group">
+      <div class="form-group row">
+        <div class="col-md-6">
+          <label class="col-form-label">Herbicide</label>
+          <select class="form-control herbicide-select" 
+                  name="service_request[herbicides][][id]" 
+                  data-herbicide-prices="<%= Herbicide.pluck(:id, :garantie_par_litre).to_h.to_json %>" 
+                  data-soja-par-litre="<%= Herbicide.pluck(:id, :soja_par_litre).to_h.to_json %>">
+            <option value="">-- Choisir un herbicide --</option>
+            <% Herbicide.all.each do |h| %>
+              <option value="<%= h.id %>"><%= h.nom %></option>
+            <% end %>
+          </select>
+        </div>
+
+        <div class="col-md-2">
+          <label class="col-form-label">Quantité (L)</label>
+          <input type="number" name="service_request[herbicides][][quantite]" 
+                 class="form-control herbicide-quantite" 
+                 min="0" step="0.01">
+        </div>
+
+        <div class="col-md-4">
+          <label class="col-form-label">Garantie (F CFA)</label>
+          <input type="text" class="form-control herbicide-garantie" readonly>
+        </div>
+
+      </div>
+    </div>
+  <% end %>
+</div>
+
+
 
 
 
@@ -98,6 +142,25 @@ document.addEventListener("DOMContentLoaded", () => {
     return;
   }
 
+   const champsSuperficie = document.querySelector('.champs_superficie');
+  
+  
+  //Fonction pour cacher champs garantie
+  function cacherGarantie(champsSuperficie) {
+    console.log(champsSuperficie);
+    superficieInput.addEventListener('input', () => {
+    const superficieValue = parseFloat(superficieInput.value);
+
+    if (!isNaN(superficieValue) && superficieValue > 0) {
+      champsSuperficie.style.display = 'none';
+    } else {
+      champsSuperficie.style.display = 'block';
+    }
+  }); 
+  }
+
+  cacherGarantie(champsSuperficie)
+
   // Fonction pour recalculer les garanties pour un groupe
   function recalculerGarantie(group) {
     const select = group.querySelector(".herbicide-select");
@@ -107,6 +170,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
     const herbicidePrices = JSON.parse(select.dataset.herbicidePrices || "{}");
     const sojaParLitreData = JSON.parse(select.dataset.sojaParLitre || "{}");
+
 
     const quantite = parseFloat(quantiteInput.value) || 0;
     const garantieParLitre = herbicidePrices[select.value] || 0;
@@ -120,7 +184,7 @@ document.addEventListener("DOMContentLoaded", () => {
     if (sojaOutput) {
       sojaOutput.value = soja.toFixed(2);
     }
-console.log(sojaParLitreData);
+
     return { garantie, soja };
   }
 
@@ -131,8 +195,9 @@ console.log(sojaParLitreData);
     let totalKgRembourse = 0;
 
     const fraisDossier = <%= @frais_dossier %>;
-
+   
     if (superficie > 0) {
+      const fraisDossier = <%= @frais_dossier %> * superficie;
       totalGarantie += <%= @garantie_ha %> * superficie + fraisDossier;
        container.querySelectorAll(".herbicide-group").forEach((group) => {
       const { soja } = recalculerGarantie(group);
@@ -143,7 +208,7 @@ console.log(sojaParLitreData);
     container.querySelectorAll(".herbicide-group").forEach((group) => {
       const { garantie, soja } = recalculerGarantie(group);
       totalGarantie += garantie;
-      totalKgRembourse += soja;
+      totalKgRembourse += soja;   
     });
     totalGarantie = totalGarantie + fraisDossier
     }
@@ -182,11 +247,20 @@ console.log(sojaParLitreData);
     attachEventListeners(newGroup);
   });
 
+
+ // Ajouter des écouteurs pour chaque champ dans chaque groupe
+ 
+
+
   // Fonction pour attacher les événements d'un groupe
   function attachEventListeners(group) {
     const select = group.querySelector(".herbicide-select");
     const quantiteInput = group.querySelector(".herbicide-quantite");
     const removeButton = group.querySelector(".remove-herbicide");
+    const champsSuperficie = group.querySelector(".champs_superficie");
+
+    cacherGarantie(champsSuperficie)
+
 
     select.addEventListener("change", () => {
       recalculerGarantie(group);
