--- a/app/views/service_requests/new.html.erb
+++ b/app/views/service_requests/new.html.erb
@@ -54,8 +54,7 @@
                     <p>Durée: <span id="modalYear">1</span> ans</p>
                 </div>
                 <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
                 </div>
             </div>
             </div>
