--- a/app/views/users/registrations/_add_user.html.erb
+++ b/app/views/users/registrations/_add_user.html.erb
@@ -29,13 +29,13 @@
           <div class="col-sm-6">
               <div class="form-group">
                   <label>Commune*</label>
-                  <%= f.text_field :commune, class: "form-control", required: true%>
+                   <%= f.select :commune, ["N'Dali", "Pèrèrè", "Sinandé"], { prompt: "Choisissez votre commune" }, class: "form-control", required: true %>
               </div>
           </div>
           <div class="col-sm-6">
               <div class="form-group">
                   <label>Village <span class="text-danger">*</span></label>
-                  <%= f.text_field :village, class: "form-control", required: true%>
+                  <%= f.text_field :village, class: "form-control", placeholder: "Entrez votre Village" , required: true %>
               </div>
           </div>
          
